--- a/app/views/admin/perks/_form.html.haml
+++ b/app/views/admin/perks/_form.html.haml
@@ -42,22 +42,22 @@
     = f.label :general_voucher_code, "Voucher Code (optional)", class: 'text-h6 mb-4'
     = f.text_field :general_voucher_code
 
-  %h2.text-h2.mb-16 Premium offer
+  %h2.text-h2.mb-16 Insiders offer
   .flex.flex-col.mb-16
-    = f.label :premium_url, "URL", class: 'text-h6 mb-4'
-    = f.text_field :premium_url
+    = f.label :insiders_url, "URL", class: 'text-h6 mb-4'
+    = f.text_field :insiders_url
   .flex.flex-col.mb-16
-    = f.label :premium_offer_summary_markdown, "Summary (Markdown)", class: 'text-h6 mb-4'
-    = f.text_field :premium_offer_summary_markdown
+    = f.label :insiders_offer_summary_markdown, "Summary (Markdown)", class: 'text-h6 mb-4'
+    = f.text_field :insiders_offer_summary_markdown
   .flex.flex-col.mb-16
-    = f.label :premium_button_text, "Button Text", class: 'text-h6 mb-4'
-    = f.text_field :premium_button_text
+    = f.label :insiders_button_text, "Button Text", class: 'text-h6 mb-4'
+    = f.text_field :insiders_button_text
   .flex.flex-col.mb-16
-    = f.label :premium_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
-    = f.text_field :premium_offer_details
+    = f.label :insiders_offer_details, "Offer details (appears on perk page)", class: 'text-h6 mb-4'
+    = f.text_field :insiders_offer_details
   .flex.flex-col.mb-16
-    = f.label :premium_voucher_code, "Voucher Code (optional)", class: 'text-h6 mb-4'
-    = f.text_field :premium_voucher_code
+    = f.label :insiders_voucher_code, "Voucher Code (optional)", class: 'text-h6 mb-4'
+    = f.text_field :insiders_voucher_code
 
 %div
   = f.submit class: 'btn btn-primary btn-base'
