--- a/app/views/admin/perks/show.html.haml
+++ b/app/views/admin/perks/show.html.haml
@@ -14,11 +14,11 @@
     .text-h6.mb-8 Button Text: #{@perk.general_button_text}
     .text-h6.mb-8 Offer Details: #{@perk.general_offer_details}
 
-    %h2.text-h2.mb-16 Premium offer
-    .text-h6.mb-8 URL: #{@perk.premium_url}
-    .text-h6.mb-8 Offer Summary: #{@perk.premium_offer_summary_markdown}
-    .text-h6.mb-8 Button Text: #{@perk.premium_button_text}
-    .text-h6.mb-8 Offer Details: #{@perk.premium_offer_details}
+    %h2.text-h2.mb-16 Insiders offer
+    .text-h6.mb-8 URL: #{@perk.insiders_url}
+    .text-h6.mb-8 Offer Summary: #{@perk.insiders_offer_summary_markdown}
+    .text-h6.mb-8 Button Text: #{@perk.insiders_button_text}
+    .text-h6.mb-8 Offer Details: #{@perk.insiders_offer_details}
 
     %hr.my-32.border-borderColor5
 
