--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -1,28 +1,38 @@
 #page-insiders
-  .lg-container
-    .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64.pt-20.md:pt-48.pb-64
-      .top-lhs
-        %h1.text-h1.flex.items-center.gap-12.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
-          Exercism Insiders
-          = graphical_icon "insiders", css_class: 'h-[32px] md:h-[60px] w-[32px] md:w-[60px]'
-        %h3.text-h3.mb-16 Our way of saying thank you.
-        %p.text-p-xlarge.mb-24 Insiders is our exclusive reward program for contributors, mentors, and large donors. Get behind the scenes access, exclusive badges, and Exercism Premium for free.
-        - if current_user.present?
-          = render ReactComponents::Insiders::InsidersStatus.new
+  .gradient-container.pt-20.md:pt-48.pb-20
+    .lg-container
+      .top.grid.grid-cols-1.md:grid-cols-2.gap-48
+        .top-lhs
+          %h1.text-h1.flex.items-center.gap-12.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
+            Exercism Insiders
+            = graphical_icon "insiders", css_class: 'h-[32px] md:h-[60px] w-[32px] md:w-[60px]'
+          %h3.text-h3.mb-16
+            Exercism relies on donations to survive &amp; thrive!
+          %p.text-p-xlarge.mb-24
 
-      .top-rhs
-        .c-youtube-container
-          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/iwhahd41h0A", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+            %strong.color-textColor1
+              Insiders is our way of saying thank you for supporting us.
+            Get behind-the-scenes access, Dark Mode, exclusive badges, ChatGPT integration, extra mentoring slots, private Discord channel, and more when you donate to Exercism.
 
-    %h2.text-h2.mb-32 Insider Features
-    .features
-      - @features.each do |feature|
-        .feature
-          = graphical_icon feature[:icon], css_class: feature[:filter] ? "filter-yellowPrompt" : ""
-          %h4= feature[:title]
-          %p= feature[:desc]
+          - if current_user.present?
+            = render ReactComponents::Insiders::InsidersStatus.new
 
-    %p.text-p-large.text-center.pb-56 (And even more coming soon!)
+        .top-rhs
+          .c-youtube-container
+            %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/iwhahd41h0A", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+
+  .gradient-container.py-56
+    .lg-container
+
+      %h2.text-h2.mb-32 Insider Features
+      .features
+        - @features.each do |feature|
+          .feature
+            = graphical_icon feature[:icon], css_class: feature[:filter] ? "filter-yellowPrompt" : ""
+            %h4= feature[:title]
+            %p= feature[:desc]
+
+      %p.text-p-large.text-center.pb-56 (And even more coming soon!)
 
   .gradient-container.faqs.py-56
     .lg-container
