--- a/app/views/tracks/show/_mentoring_article.html.haml
+++ b/app/views/tracks/show/_mentoring_article.html.haml
@@ -37,7 +37,7 @@
           .info
             .next-slot
               Or
-              = link_to 'Upgrade to Premium', premium_path, class: 'text-prominentLinkColor font-semibold'
+              = link_to 'Donate to Exercism', insiders_path, class: 'text-prominentLinkColor font-semibold'
               to unlock all mentoring slots.
 
               = link_to "Learn More.", doc_path(:using, "product/reputation"), class: 'font-semibold'
