--- a/app/views/mailers/notifications_mailer/expired_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/expired_insiders.html.haml
@@ -7,7 +7,7 @@
   Thank you for supporting Exercism. We've helped over 1M people improve their programing skills for free, and we rely on people like you to support us. So thank you so much for doing so.
 %p
   If you'd like to continue supportig us, that would mean the world to us.
-  You can set up a new regular donation on the #{link_to 'Insiders page', 'https://exercism.org/premium'}
+  You can set up a new regular donation on the #{link_to 'Insiders page', 'https://exercism.org/insiders'}
 
 %p Have a great day!
 
