--- a/app/views/perks/index.html.haml
+++ b/app/views/perks/index.html.haml
@@ -6,7 +6,7 @@
         %h1.text-h1.mb-12 Exercism Perks
         %p.text-p-large.mb-16
           Get discounts and free trials from the organisations that support Exercism's mission for equal access to education and opportunity.
-          = link_to "Exercism Insiders", premium_path, class: 'font-semibold text-linkColor'
+          = link_to "Exercism Insiders", insiders_path, class: 'font-semibold text-linkColor'
           get enhanced Perks.
       = graphical_icon "contributing-header", css_class: "w-[220px] h-[220px] ml-auto hidden md:block", category: :graphics
       .decorations
