--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -6,8 +6,9 @@
           %h1.text-h1.flex.items-center.gap-12.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
             Exercism Insiders
             = graphical_icon "insiders", css_class: 'h-[32px] md:h-[60px] w-[32px] md:w-[60px]'
-          %h3.text-h3.mb-16
-            Exercism relies on donations to survive &amp; thrive!
+          %h3.text-h3.mb-16.leading-140
+            Enjoying Exercism?
+            We rely on donations from people like you to survive &amp; grow!
           %p.text-p-xlarge.mb-24
             %strong.text-textColor1
               Insiders is our way of saying thank you for supporting us.
