--- a/app/css/components/youtube-container.css
+++ b/app/css/components/youtube-container.css
@@ -14,3 +14,21 @@
         height: 100%;
     }
 }
+
+.c-vimeo-container {
+    @apply relative overflow-hidden;
+    padding-top: 56.25%;
+
+    & iframe,
+    & object,
+    & embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        .vp-center {
+            background: blue;
+        }
+    }
+}
