--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -18,8 +18,9 @@
             Why not start with the latest behind the scenes Insiders video 👉
 
         .top-rhs
-          .c-youtube-container
-            %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/GOPmj_AMbP8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+          .c-vimeo-container
+            %iframe{ width: "560", height: "315", src: "https://player.vimeo.com/video/853051394?h=c9bde0cbd4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&transparent=0", frameborder: "0", allow: "autoplay; fullscreen; picture-in-picture", allowfullscreen: true }
+          %script{ src: "https://player.vimeo.com/api/player.js" }
 
   .gradient-container.py-64
     .lg-container
@@ -39,6 +40,10 @@
 
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/nroPGD11hkw", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+
+        .c-vimeo-container
+          %iframe{ width: "560", height: "315", src: "https://player.vimeo.com/video/853051394?h=c9bde0cbd4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&transparent=0", frameborder: "0", allow: "autoplay; fullscreen; picture-in-picture", allowfullscreen: true }
+        %script{ src: "https://player.vimeo.com/api/player.js" }
 
   .gradient-container.py-64
     .lg-container
