--- a/app/views/insiders/show.html.haml
+++ b/app/views/insiders/show.html.haml
@@ -1,6 +1,6 @@
 #page-insiders
   = render ReactComponents::Modals::WelcomeToInsidersModal.new
-  .gradient-container.pt-20.md:pt-48.pb-64
+  .gradient-container.pt-20.md:pt-48.pb-48
     .lg-container
       .top.grid.grid-cols-1.md:grid-cols-2.gap-48
         .top-lhs
@@ -10,11 +10,11 @@
           %p.text-h3.mb-24
             Thanks for making Exercism the success it is.
           %p.text-p-xlarge.mb-8
-            You're joining us at the start of our Insiders story. Things will be evolving rapidly over the coming months.
-          %p.text-p-xlarge.mb-8
-            In the coming weeks we're going to be adding exclusive Perks from partners (once we get a few of them finalised), and some exclusive content just for you too.
-            We'll also be fleshing this section out and making it somewhat more delightful.
-          %p.text-p-xlarge.mb-8
+            Exercism exists because people like you come together to build, fund and support it. Thank you so much!
+          %p.text-p-large.mb-8
+            Below you'll find information about the different features you can now access through Insiders, along with behind the scenes videos.
+            If you have ideas for extra features or extra behind-the-scenes content, please post on our #insiders channel on Discord, or open a thread on the forum.
+          %p.text-p-large.mb-8
             Why not start with the latest behind the scenes Insiders video 👉
 
         .top-rhs
@@ -22,7 +22,7 @@
             %iframe{ width: "560", height: "315", src: "https://player.vimeo.com/video/853051394?h=c9bde0cbd4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&transparent=0", frameborder: "0", allow: "autoplay; fullscreen; picture-in-picture", allowfullscreen: true }
           %script{ src: "https://player.vimeo.com/api/player.js" }
 
-  .gradient-container.py-64
+  .gradient-container.py-48
     .lg-container
       %h2.text-h2.mb-32 Behind-the-scenes videos
       .grid.grid-cols-3.gap-32
@@ -45,14 +45,14 @@
           %iframe{ width: "560", height: "315", src: "https://player.vimeo.com/video/853051394?h=c9bde0cbd4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&transparent=0", frameborder: "0", allow: "autoplay; fullscreen; picture-in-picture", allowfullscreen: true }
         %script{ src: "https://player.vimeo.com/api/player.js" }
 
-  .gradient-container.py-64
+  .gradient-container.py-48
     .lg-container
       %h2.text-h2.mb-32 Your Insider Benefits
       .features
         .feature
           = graphical_icon :'feature-youtube', css_class: "filter-yellowPrompt"
           %h4 Exclusive content
-          %p Keep up to date with what we're planning and building with private Insiders livestreams, vlogs, and technical deep dives. Check out the videos above. More coming soon!
+          %p Keep up to date with what we're planning and building with private Insiders livestreams, vlogs, and technical deep dives. Check out the videos above. We'll email you when there's a new one.
 
         .feature
           = graphical_icon :'feature-discord', css_class: "filter-yellowPrompt"
@@ -64,8 +64,48 @@
           %h4 Contribute on community calls
           %p Our community calls are watchable by anyone, but only Insiders join in the conversation. Jump on stage and make your voice heard. Check Events on #{link_to 'Discord', 'https://exercism.org/r/discord'} for the next call.
 
-  .gradient-container.py-64
-    .lg-container
-      = render "features_inside"
+        .feature
+          = graphical_icon :moon, css_class: "filter-yellowPrompt"
+          %h4 Dark theme
+          %p We've put together a lovely Dark Theme for you to enjoy. Give your eyes a break while coding at night and enjoy Exercism in its darkest glory. You can toggle your theme in your #{link_to 'User Preferences', user_preferences_settings_path}.
+
+        .feature
+          = graphical_icon :robot, css_class: "filter-yellowPrompt"
+          %h4 ChatGPT
+          %p Our ChatGPT integration will help you get unstuck directly in our online editor. You get 3x v4.0 requests and 30x v3.5 requests per calendar month. Let us know how you get on!
+
+        .feature
+          = graphical_icon :insiders
+          %h4 Name tag flair &amp; Badges
+          %p
+            You'll now see a shiny little
+            = icon "insiders", "purple heart icon signifying Insiders", style: "all:unset;display:inline;width:20px;height:20px"
+            next to your name around the site and a new tag on your #{link_to 'your public profile', profile_path(current_user.handle)}.
+            At some point soon, we'll be letting you customise which icon you'd like!
+
+        .feature
+          = graphical_icon :mentoring, css_class: "filter-yellowPrompt"
+          %h4 Extra Mentoring Slots
+          %p You now have the maximum amount of simultaneous mentoring slots available per track. Check half way down a track page to check your active sessions.
+
+        .feature
+          = graphical_icon :badges, css_class: "filter-yellowPrompt"
+          %h4 Exclusive Badges
+          %p
+            You should also have a new very exclusive badge (or two!). Check your
+            = link_to "My Journey", badges_journey_path
+            badges to reveal them. There are also new extra hidden badges for you to unlock
+            as you solve exercises.
+
+        .feature
+          = graphical_icon :perks, css_class: "filter-yellowPrompt"
+          %h4 Exclusive Perks
+          %p
+            In the next few weeks, we'll be revealing exclusive Perks from our partners.
+            As an Insider, you'll get exclusive bonuses offers and discounts.
+
+
+
+
 
 
