--- a/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
@@ -4,12 +4,15 @@
   I'm excited to let you know you're eligible for Exercism Insiders - our rewards program for people who contribute, mentor, or donate to Exercism.
   You can activate your Insiders account on the #{link_to 'Insiders Page', insiders_url}.
 
-%p
-  Insiders gives you three main benefits:
+%p Insiders gives you a few extra benefits:
 %ol
-  %li Exercism Premium for free. You now have access to Dark Mode, ChatGPT Integration, extra mentoring slots and more.
+  %li Access to our sexy Dark Mode
+  %li ChatGPT Integration for when you get stuck on exercises
   %li Behind the scenes content. You can watch videos from me and the team, keeping you in the loop, as we work on Exercism.
   %li Closer access to the team and key community members, with our dedicated #insiders Discord channel.
+  %li Extra mentoring slots.
+  %li Exclusive Badges
+  %li And more!
 
 %p
   Your Insiders status will continue for as long as you're actively contributing, mentoring or donating.
