FIx tests, tiny tweaks

--- a/app/css/components/mentoring-request-form.css
+++ b/app/css/components/mentoring-request-form.css
@@ -24,6 +24,14 @@
         }
     }
 
+    &.realtime-feedback-modal-form {
+        .question {
+            label {
+                @apply text-textColor1;
+            }
+        }
+    }
+
     .first-time {
         @apply flex items-start;
         @apply bg-lightOrange rounded-8;
