Realtime feedback modal improvements (#5845)
* Continue button tweaks

* Embed Mentoring Request form

* Rearrange NoAutomatedFeedback

* Tweaks

* Add an onSuccess step

* Refactor, add pending state

* Remove flair

* Edit analyzer feedback

* Add hr on feedback panel

* Style button container

* Update text globally, remove wrong margin

* Extract LoadingBar

* Refactor, improvements, tweaks

* Update styling

* Redirect if mentoring status is not none

* Update edit solution test

* Update button styling

* Update analyzer text

* Further tweaks (#5867)

* Move avatar to top of container

* Emphasize loading text

* Add in_progress component

* Add discussion widget

* Add test/adjust tests

* Tweaks

* Remove discussion props, change ordering of buttons on pending request, change mentoring to code review, textColor1 on question in request form

* Change link name, fix typo

* FIx tests, tiny tweaks

* Change label colour globally on mentoring request form

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -71,6 +71,7 @@
 @import "./components/docs-tracks-list";
 @import "./components/iterations-footer";
 @import "./components/solution-iterations";
+@import "./components/loading-bar";
 @import "./components/loading-overlay";
 @import "./components/loading-suspense";
 @import "./components/unlocked-concept";
@@ -134,6 +135,7 @@
 @import "./components/completed-exercise-progress";
 @import "./components/search-input";
 @import "./components/zero-section";
+@import "./components/mentoring-request-form";
 
 @import "./components/widgets/exercise";
 @import "./components/mentor-discussion-post-editor";
