--- a/app/css/pages/track-show.css
+++ b/app/css/pages/track-show.css
@@ -1,5 +1,33 @@
 @import "../styles";
 
+@keyframes shimmer {
+    0% {
+        /*clip-path: polygon(100% 0%,100% 10%,0% 100%,0% 90%);*/
+        clip-path: polygon(-5% 0%, 5% 0%, 0% 5%, 0% -5%);
+    }
+
+    30% {
+        clip-path: polygon(195% 0%, 205% 0%, 0% 205%, 0% 195%);
+    }
+
+    /* This just keeps adds a delay between visible animation iteratons */
+    100% {
+        clip-path: polygon(295% 0%, 305% 0%, 0% 305%, 0% 295%);
+    }
+}
+
+@keyframes pulse-box-shadow {
+    0% {
+        box-shadow: 0px 4px 8px 0px rgba(var(--shadowColorMain), 0.2);
+    }
+    50% {
+        box-shadow: 0px 4px 16px 0px rgba(var(--shadowColorMain), 0.5);
+    }
+    100% {
+        box-shadow: 0px 4px 8px 0px rgba(var(--shadowColorMain), 0.2);
+    }
+}
+
 #page-track-show {
     & .track-header {
         & .container {
@@ -172,7 +200,7 @@
                 @apply flex flex-col items-stretch;
                 flex: 1 1 20%;
                 img {
-                    @apply w-fill m-8;
+                    @apply w-fill;
                 }
                 .title {
                     @apply border-t-1 border-borderColor7 p-8 bg-backgroundColorB bg-white;
@@ -180,10 +208,27 @@
                     @apply flex flex-grow place-items-center self-center text-center;
                     @apply leading-130;
                 }
+                &.revealable {
+                    animation: pulse-box-shadow 2s infinite forwards;
+                    @apply shadow-sm hover:shadow-smZ1;
+                    @apply relative overflow-hidden;
+                    img:not(.shimmer) {
+                        @apply grayscale opacity-[0.15];
+                    }
+
+                    .shimmer {
+                        @apply absolute inset-8;
+                        bottom: 55px;
+                        @apply bg-contain bg-no-repeat;
+                        clip-path: polygon(-5% 0%, 5% 0%, 0% 5%, 0% -5%);
+                        animation: shimmer 3s infinite forwards;
+                    }
+                }
+
                 &.acquired {
                     @apply shadow-sm hover:shadow-smZ1;
                 }
-                &:not(.acquired) {
+                &.not-acquired {
                     img {
                         @apply grayscale opacity-[0.15];
                     }
