--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -3,6 +3,6 @@
 #page-track-show
   = render ViewComponents::Track::Header.new(@track, :overview)
 
-  = render "tracks/show/summary_article", track: @track, user_track: @user_track, exercise_statuses: @exercise_statuses, recent_solutions: @recent_solutions, sample_learnt_concepts: @sample_learnt_concepts, sample_mastered_concepts: @sample_mastered_concepts, last_8_weeks_counts: @last_8_weeks_counts, forum_threads: @forum_threads, trophies: @track.trophies
+  = render "tracks/show/summary_article", track: @track, user_track: @user_track, exercise_statuses: @exercise_statuses, recent_solutions: @recent_solutions, sample_learnt_concepts: @sample_learnt_concepts, sample_mastered_concepts: @sample_mastered_concepts, last_8_weeks_counts: @last_8_weeks_counts, forum_threads: @forum_threads
   = render "tracks/show/mentoring_article", track: @track, user_track: @user_track
   = render "tracks/show/updates_article", track: @track, updates: @updates
