--- a/app/views/admin/adverts/_form.html.haml
+++ b/app/views/admin/adverts/_form.html.haml
@@ -22,6 +22,14 @@
     = f.label :emphasised_text, class: 'text-h6 mb-4'
     = f.text_field :emphasised_text
 
+  .flex.flex-col.mb-16
+    = f.label :light_logo, class: 'text-h6 mb-4'
+    = f.file_field :light_logo
+
+  .flex.flex-col.mb-16
+    = f.label :dark_logo, class: 'text-h6 mb-4'
+    = f.file_field :dark_logo
+
 %div
   = f.submit class: 'btn btn-primary btn-base'
 
