--- a/app/views/mailers/mailshots_mailer/challenge_12in23_feb_swag.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_feb_swag.html.erb
@@ -517,7 +517,7 @@ div.preheader {
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
                     <a href="https://swag.exercism.org/" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/ff-swag.jpg" style="width:100%; display:block"/>
+                      <img src="https://assets.exercism.org/images/thumbnails/ff-swag.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
@@ -534,7 +534,7 @@ div.preheader {
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
                     <a href="https://www.youtube.com/watch?v=OuFcEQJs34w" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-intro-to-haskell-with-play-icon.jpg" style="width:100%; display:block"/>
+                      <img src="https://assets.exercism.org/images/thumbnails/yt-intro-to-haskell-with-play-icon.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
