--- a/app/views/mailers/mailshots_mailer/upcoming_jose_valim.html.erb
+++ b/app/views/mailers/mailshots_mailer/upcoming_jose_valim.html.erb
@@ -525,7 +525,7 @@ div.preheader {
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
                     <a href="https://www.youtube.com/watch?v=LknqlTouTKg" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-jose-interview-preview.jpg" style="width:100%; display:block"/>
+                      <img src="https://assets.exercism.org/images/thumbnails/yt-jose-interview-preview.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
