--- a/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/eligible_for_insiders.html.haml
@@ -21,7 +21,7 @@
 
 %p{ style: "margin-bottom: 24px" }
   %a{ href: "https://www.youtube.com/watch?v=iwhahd41h0A", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/introducing-insiders-with-play-icon.jpg", style: "width:100%; display:block" }
+    %img{ src: "https://assets.exercism.org/images/thumbnails/introducing-insiders-with-play-icon.jpg", style: "width:100%; display:block" }
 
 %p Thanks so much for being part of Exercism's story. I really hope you enjoy Insiders!
 
