--- a/app/views/mailers/notifications_mailer/joined_exercism.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_exercism.html.haml
@@ -13,7 +13,7 @@
 
 %p{ style: "margin-bottom: 24px" }
   %a{ href: "https://www.youtube.com/watch?v=8rmbTWAncb8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-onboarding-welcome-with-play-icon.jpg", style: "width:100%; display:block" }
+    %img{ src: "https://assets.exercism.org/images/thumbnails/yt-onboarding-welcome-with-play-icon.jpg", style: "width:100%; display:block" }
 
 %p
   If you ever get stuck or have questions, don't hesitate to post in #{link_to 'our forum', 'https://forum.exercism.org'}.
