Materialize trophy notification

--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -45,7 +45,7 @@
             .status Total Exercises
             .count= user_track.num_exercises
 
-      %section.trophy-cabinet
+      %section#trophy-cabinet.trophy-cabinet
         %h2.text-h4.mb-2.text-center
           #{track.title} Trophy Cabinet
         %p.text-p-base.text-textColor6.mb-20.text-center
