--- a/app/views/mailers/notifications_mailer/acquired_trophy.html.haml
+++ b/app/views/mailers/notifications_mailer/acquired_trophy.html.haml
@@ -1,6 +1,6 @@
 %p Hi #{@user.handle},
 %p
-  Congratulations! You've unlocked a new trophy at Exercism.
+  Congratulations! You've unlocked a new trophy on the #{@track.title} track.
   %br
-  Visit your Exercism Journey page to see what you earned.
-= email_button_to "Show me what I unlocked!", badges_journey_url
+  Visit the #{@track.title} track page and check the trophy cabinet to see what you earned.
+= email_button_to "Show me what I unlocked!", track_url(@track, anchor: "trophy-cabinet")
