--- a/app/views/mailers/notifications_mailer/acquired_trophy.text.haml
+++ b/app/views/mailers/notifications_mailer/acquired_trophy.text.haml
@@ -1,6 +1,6 @@
 Hi #{@user.handle},
 \
-Congratulations! You've unlocked a new trophy at Exercism.
-Visit your Exercism Journey page to see what you earned.
+Congratulations! You've unlocked a new trophy on the #{@track.title} Track.
+Visit the #{@track.title} track page and check the trophy cabinet to see what you earned.
 \
-Reveal it here: #{badges_journey_url}
+Reveal it here: #{track_url(@track, anchor: 'trophy-cabinet')}
